[metadata]
name = api_plugin
author = Mirantis
home-page = http://mirantis.com
version = 1.0
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console

[files]
packages =
    api_plugin

[entry_points]
api_call.observer =
    time = api_plugin.observer:ExecutionTime
